# fastapi_zero

./: .gitignore  README.md  pyproject.toml
app/: app.py  models.py
migrations/: env.py
migrations/versions/: 14c4197de27e_exercicio_02_aula_04.py  551b842dab48_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
